--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@
 *.dll
 *.so
 *.dylib
+.vscode
 
 # Test binary, built with `go test -c`
 *.test
+
+# Test databases
+wishlist.db
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
