--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build
-      run: go build -v ./...
+      run: go build -v -o wishlist main.go
 
     - name: Test
       run: go test -v ./...
