--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,5 +27,7 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: ls
-      run: ls -l
+    - name: github-action-publish-binaries
+      uses: skx/github-action-publish-binaries@release-0.14
+      with:
+        args: 'wishlist'
