--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    needs: [create_release]
     steps:
 
     - name: Set up Go 1.x
@@ -31,5 +32,6 @@ jobs:
       uses: skx/github-action-publish-binaries@release-0.14
       with:
         args: 'wishlist'
+        releaseId: ${{ needs.create_release.outputs.id }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
