Checkout before build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,8 @@ jobs:
     needs: create_release
     runs-on: ubuntu-latest
     steps:
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
     - name: Build
       run: go build -v -o wishlist main.go
     - name: github-action-publish-binaries
