--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
       - name: Build
-        run: go build -v -o wishlist main.go
+        run: export GIN_MODE=release; go build -v -o wishlist main.go
       - name: Upload Release Asset
         id: upload-release-asset 
         uses: actions/upload-release-asset@v1
